Replace deprecated Long constructor with Long.valueOf()